# Boggle

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  tox.ini
boggle/: __init__.py  exceptions.py  models.py  schemas.py
boggle/config/: __init__.py  app.py  db.py
boggle/defaults/: __init__.py  game.py
boggle/templates/: openapi.py
boggle/tests/: client.py  conftest.py  test_app.py  test_game_create.py  test_game_play.py  test_game_show.py
boggle/utils/: authentication.py  db.py  exception.py  request.py  serialization.py  validation.py
boggle/utils/views/: game.py
boggle/views/: game.py  openapi.py  root.py  urls.py
migrations/: env.py
migrations/versions/: ffb40983074f_.py
requirements/: dev.txt  main.txt
scripts/: dev.sh  migration_dev_db.sh  production.sh  reset_docker.sh  test.sh
