[tool.poetry]
name = "project_boggle_game"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
starlette = "^0.13.2"
ujson = "^1.35"
uvicorn = "^0.11.3"
uvloop = { version = "^0.14.0", markers = "implementation_name != 'pypy' and platform_system != 'Windows'"}
marshmallow = "^3.5.0"
alembic = "^1.4.0"
psycopg2-binary = "^2.8.4"
gino = "^0.8.6"
sqlalchemy = "^1.3.13"
pyyaml = "^5.3"
cytoolz = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.1.1"
tox = "^3.14.5"
httpx = "^0.11.1"
itsdangerous = "^1.1.0"
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
sqlalchemy_utils = "^0.36.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
